syntax = "proto3";

message LoginJWTRequest {
  string email = 1;
  string password = 2;
}

message LoginJWTResponse {
  string token = 1;
}

message AuthenticateJWTRequest {
  string token = 1;
}
message AuthenticateJWTResponse {
  bool isValid = 1;
  string id = 2;
}

service AuthenticateService {
  rpc loginJWT(LoginJWTRequest) returns (LoginJWTResponse);
  rpc authenticateJWT(AuthenticateJWTRequest) returns (AuthenticateJWTResponse);
}